--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-python-telegram-bot==13.7
-requests==2.26.0
-Flask==2.3.3
-pyTelegramBotAPI==4.3.1
-schedule==1.2.0
-pytz==2023.3
+pyTelegramBotAPI
+Flask
+pytz
