--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-telebot
-Flask
-gunicorn
-pytz
-schedule
+pyTelegramBotAPI==4.14.0
+Flask==3.0.0
+gunicorn==21.2.0
+pytz==2024.1
+python-dotenv==1.0.0
